--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
             <div class="home__container container grid">
                 <div class="home__content grid">
                     <div class="home__social">
+                        <a href="https://www.linkedin.com/in/ilhan-alim-74a627266/" target="_blank"
+                            class="home__social-icon">
+                            <i class="uil uil-linkedin-alt"></i>
+                        </a>
                         <a href="https://www.instagram.com/ilhanalim_/" target="_blank" class="home__social-icon">
                             <i class="uil uil-instagram"></i>
                         </a>
@@ -222,7 +226,7 @@
                     </div>
                 </div>
             </div>
-            <div class="skills__container2 container grid">
+            <div class="skills__container container grid">
                 <div>
                     <div class="skills__header">
                         <i class="fa-brands fa-php skills__icon"></i>
@@ -253,6 +257,16 @@
 
                     </div>
                 </div>
+                <div>
+                    <div class="skills__header">
+                        <i class="fab fa-laravel skills__icon"></i>
+
+                        <div>
+                            <h1 class="skills__title">Laravel</h1>
+                        </div>
+
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -268,6 +282,10 @@
                         Education
                     </div>
 
+                    <div class="qualification__button button--flex" data-target="#work">
+                        <i class="uil uil-briefcase-alt qualification__icon"></i>
+                        Experience
+                    </div>
                 </div>
 
                 <div class="qualification__sections">
@@ -308,6 +326,62 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                    <!--==================== QUALIFICATION CONTENT 2 ====================-->
+                    <div class="qualification__content" data-content id="work">
+                        <!--==================== QUALIFICATION 1 ====================-->
+                        <div class="qualification__data">
+                            <div>
+                                <h3 class="qualification__title">Secretary of the Organization</h3>
+                                <span class="qualification__subtitle">Banjarsari RW.08 Youth Organization</span>
+                                <div class="qualification__calendar">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    2021 - Now
+                                </div>
+                            </div>
+
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
+                        </div>
+
+                        <!--==================== QUALIFICATION 2 ====================-->
+                        <div class="qualification__data">
+                            <div></div>
+
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <!-- <span class="qualification__line"></span> -->
+                            </div>
+
+                            <div>
+                                <h3 class="qualification__title">Backend Developer Intern</h3>
+                                <span class="qualification__subtitle">Pilih Jurusan</span>
+                                <div class="qualification__calendar">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    2023
+                                </div>
+                            </div>
+                        </div>
+
+                        <!--==================== QUALIFICATION 3 ====================-->
+                        <!-- <div class="qualification__data">
+                            <div>
+                                <h3 class="qualification__title">Ui Designer</h3>
+                                <span class="qualification__subtitle">Figma - Spain</span>
+                                <div class="qualification__calendar">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    2017 - 2019
+                                </div>
+                            </div>
+
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
+                        </div> -->
+
                     </div>
                 </div>
             </div>
