--- a/index.html
+++ b/index.html
@@ -566,6 +566,9 @@
                 </ul>
 
                 <div class="footer__socials">
+                    <a href="https://www.linkedin.com/in/ilhan-alim-74a627266/" target="_blank" class="footer__social">
+                        <i class="uil uil-linkedin-alt"></i>
+                    </a>
                     <a href="https://www.instagram.com/ilhanalim_/" target="_blank" class="footer__social">
                         <i class="uil uil-instagram"></i>
                     </a>
