add portfolio and github button link

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
                     <li class="nav__item">
                         <a href="#portofolio" class="nav__link">
-                            <i class="uil uil-scenery nav__icon"></i> Portofolio
+                            <i class="uil uil-scenery nav__icon"></i> Portfolio
                         </a>
                     </li>
                     <li class="nav__item">
@@ -148,9 +148,14 @@
 
                 <div class="about__data">
                     <p class="about__description">
-                        My name is Ilhan Alim Asfandima. I am a 4th semester student majoring in informatics at a
-                        national university in Indonesia. I have an interest in programming, I learned it through the
-                        internet and have a dream to become an expert programmer.
+                        My name is Ilhan Alim Asfandima. I am an active student majoring in informatics at a national
+                        university in
+                        Indonesia. I have an interest in programming. I am actively
+                        seeking
+                        opportunities to improve my skills and knowledge in web programming and related technologies. I
+                        have a
+                        dream to become
+                        an expert programmer.
                     </p>
                     <!-- <div class="about__info">
                         <div>
@@ -249,10 +254,10 @@
                 </div>
                 <div>
                     <div class="skills__header">
-                        <i class="fab fa-bootstrap skills__icon"></i>
+                        <i class="fab fa-node skills__icon"></i>
 
                         <div>
-                            <h1 class="skills__title">Bootstrap</h1>
+                            <h1 class="skills__title">NodeJS</h1>
                         </div>
 
                     </div>
@@ -404,11 +409,19 @@
                             <p class="portofolio__description">
                                 Random quiz that can be played and can show the final score.
                             </p>
-                            <a href="https://ilhanalim.github.io/quiz-app/" target="_blank"
-                                class="button button--flex button--small portofolio__button">
-                                Demo
-                                <i class="uil uil-arrow-right button__icon"></i>
-                            </a>
+                            <div class="flex jus-space">
+                                <a href="https://ilhanalim.github.io/quiz-app/" target="_blank"
+                                    class="button button--flex button--small portofolio__button">
+                                    Demo
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+                                <a href="https://github.com/Ilhanalim/quiz-app" target="_blank"
+                                    class="button button--flex button--small portofolio__button">
+                                    Github
+                                    <i class="uil uil-github button__icon"></i>
+                                </a>
+                            </div>
+
                         </div>
                     </div>
                     <!--==================== PORTFOLIO 2 ====================-->
@@ -420,11 +433,18 @@
                             <p class="portofolio__description">
                                 A simple calculator that can calculate mathematical calculations accurately.
                             </p>
-                            <a href="https://ilhanalim.github.io/calculator/" target="_blank"
-                                class="button button--flex button--small portofolio__button">
-                                Demo
-                                <i class="uil uil-arrow-right button__icon"></i>
-                            </a>
+                            <div class="flex jus-space">
+                                <a href="https://ilhanalim.github.io/calculator/" target="_blank"
+                                    class="button button--flex button--small portofolio__button">
+                                    Demo
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+                                <a href="https://github.com/Ilhanalim/calculator" target="_blank"
+                                    class="button button--flex button--small portofolio__button">
+                                    Github
+                                    <i class="uil uil-github button__icon"></i>
+                                </a>
+                            </div>
                         </div>
                     </div>
                     <!--==================== PORTFOLIO 3 ====================-->
@@ -437,11 +457,64 @@
                                 Rock paper scissors game that can be played against the computer and counted how many
                                 times it wins and loses
                             </p>
-                            <a href="https://ilhanalim.github.io/rps-game/" target="_blank"
-                                class="button button--flex button--small portofolio__button">
-                                Demo
-                                <i class="uil uil-arrow-right button__icon"></i>
-                            </a>
+                            <div class="flex jus-space">
+                                <a href="https://ilhanalim.github.io/rps-game/" target="_blank"
+                                    class="button button--flex button--small portofolio__button">
+                                    Demo
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+                                <a href="https://github.com/Ilhanalim/rps-game" target="_blank"
+                                    class="button button--flex button--small portofolio__button">
+                                    Github
+                                    <i class="uil uil-github button__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!--==================== PORTFOLIO 4 ====================-->
+                    <div class="portofolio__content grid swiper-slide">
+                        <img src="assets/img/portfolio4.jpg" alt="" class="portofolio__img">
+
+                        <div class="portofolio__data">
+                            <h3 class="portofolio__title">Music Player</h3>
+                            <p class="portofolio__description">
+                                Music player that can play music from fetch API
+                            </p>
+                            <div class="flex jus-space">
+                                <a href="https://ilhanalim.github.io/music-player/" target="_blank"
+                                    class="button button--flex button--small portofolio__button">
+                                    Demo
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+                                <a href="https://github.com/Ilhanalim/music-player" target="_blank"
+                                    class="button button--flex button--small portofolio__button">
+                                    Github
+                                    <i class="uil uil-github button__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!--==================== PORTFOLIO 5 ====================-->
+                    <div class="portofolio__content grid swiper-slide">
+                        <img src="assets/img/portfolio5.jpg" alt="" class="portofolio__img">
+
+                        <div class="portofolio__data">
+                            <h3 class="portofolio__title">Music API</h3>
+                            <p class="portofolio__description">
+                                simple rest API that can get music data
+                            </p>
+                            <div class="flex jus-space">
+                                <a href="https://simple-music-api.000webhostapp.com/" target="_blank"
+                                    class="button button--flex button--small portofolio__button">
+                                    Demo
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+                                <a href="https://github.com/Ilhanalim/api" target="_blank"
+                                    class="button button--flex button--small portofolio__button">
+                                    Github
+                                    <i class="uil uil-github button__icon"></i>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
