add more portfolio

--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                         <div class="portofolio__data">
                             <h3 class="portofolio__title">Music API</h3>
                             <p class="portofolio__description">
-                                simple rest API that can get music data
+                                Simple rest API that can get music data
                             </p>
                             <div class="flex jus-space">
                                 <a href="https://simple-music-api.000webhostapp.com/" target="_blank"
@@ -512,6 +512,29 @@
                                     <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
                                 <a href="https://github.com/Ilhanalim/api" target="_blank"
+                                    class="button button--flex button--small portofolio__button">
+                                    Github
+                                    <i class="uil uil-github button__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!--==================== PORTFOLIO 6 ====================-->
+                    <div class="portofolio__content grid swiper-slide">
+                        <img src="assets/img/portfolio6.jpg" alt="" class="portofolio__img">
+
+                        <div class="portofolio__data">
+                            <h3 class="portofolio__title">Akinator Marvel Game </h3>
+                            <p class="portofolio__description">
+                                Simple akinator game that can guess marvel character
+                            </p>
+                            <div class="flex jus-space">
+                                <a href="https://ilhanalim.github.io/akinator-marvel/" target="_blank"
+                                    class="button button--flex button--small portofolio__button">
+                                    Demo
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+                                <a href="https://github.com/Ilhanalim/akinator-marvel" target="_blank"
                                     class="button button--flex button--small portofolio__button">
                                     Github
                                     <i class="uil uil-github button__icon"></i>
