Add web blog portfolio

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <body>
     <!--==================== HEADER ====================-->
-    <header class="header" id="header" data-aos="fade-down">
+    <header class="header" id="header">
         <nav class="nav container">
             <a href="#" class="nav__logo">Ilhan</a>
 
@@ -403,6 +403,30 @@
             <div class="portofolio__container container swiper-container">
                 <div class="swiper-wrapper">
                     <!--==================== PORTFOLIO 1 ====================-->
+                    <div class="portofolio__content grid swiper-slide">
+                        <img src="assets/img/web-blog.jpg" alt="" class="portofolio__img">
+
+                        <div class="portofolio__data">
+                            <h3 class="portofolio__title">Web Blog</h3>
+                            <p class="portofolio__description">
+                                Simple web blog that can login and post, update, delete, comment. Build with Laravel
+                                framework and Tailwind CSS
+                            </p>
+                            <div class="flex jus-space">
+                                <a href="https://simple-web-blog.000webhostapp.com/" target="_blank"
+                                    class="button button--flex button--small portofolio__button">
+                                    Demo
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+                                <a href="https://github.com/Ilhanalim/web-blog" target="_blank"
+                                    class="button button--flex button--small portofolio__button">
+                                    Github
+                                    <i class="uil uil-github button__icon"></i>
+                                </a>
+                            </div>
+
+                        </div>
+                    </div>
                     <div class="portofolio__content grid swiper-slide">
                         <img src="assets/img/portfolio1.jpg" alt="" class="portofolio__img">
 
