update ava img and cv

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
             <div class="about__container container grid">
                 <!-- <img src="assets/img/about2blr2.png" alt="" class="about__img"> -->
-                <img src="assets/img/about2.jpg" alt="" class="about__img" data-aos="fade-right">
+                <img src="assets/img/ava.jpg" alt="" class="about__img" data-aos="fade-right">
 
                 <div class="about__data" data-aos="fade-left">
                     <p class="about__description">
@@ -177,7 +177,7 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a href="assets/pdf/Ilhan-portfolio.pdf" class="button button-flex"> Download Portfolio
+                        <a href="assets/pdf/Ilhan-CV.pdf" class="button button-flex"> Download CV
                             <i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
