--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
 
-    <title>Hi, I'm Ilhan</title>
+    <title>Hi, I'am Ilhan</title>
 </head>
 
 <body>
@@ -588,7 +588,7 @@
             <span class="section__subtitle">Get in touch</span>
 
             <div class="contact__container container grid">
-                <div data-aos="fade-right">
+                <div>
                     <div class="contact__information">
                         <i class="uil uil-phone contact__icon"></i>
 
@@ -617,8 +617,7 @@
                     </div>
                 </div>
 
-                <form action="" class="contact__form grid" name="submit-to-google-sheet" autocomplete="off"
-                    data-aos="fade-left">
+                <form action="" class="contact__form grid" name="submit-to-google-sheet" autocomplete="off">
 
                     <div class="contact__content">
                         <label for="" class="contact__label">Name</label>
