--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
 
             <div class="about__container container grid">
                 <!-- <img src="assets/img/about2blr2.png" alt="" class="about__img"> -->
-                <img src="assets/img/ava.jpg" alt="" class="about__img" data-aos="fade-right">
+                <img src="assets/img/ava.jpg" alt="" class="about__img">
 
-                <div class="about__data" data-aos="fade-left">
+                <div class="about__data">
                     <p class="about__description">
                         My name is Ilhan Alim Asfandima. I am an active student majoring in informatics at a national
                         university in
